--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 id="title">Adivinhe a Cor!</h1>
+    <h2 id="rgb-color">(168, 34, 1)</h2>
     <script src="script.js"></script>
 </body>
 </html>
