--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <h1 id="title">Adivinhe a Cor!</h1>
     <h2 id="rgb-color">(168, 34, 1)</h2>
+    <div id="listaBall">
+        <div class="ball" id="circulo1"></div>
+        <div class="ball" id="circulo2"></div>
+        <div class="ball" id="circulo3"></div>
+        <div class="ball" id="circulo4"></div>
+        <div class="ball" id="circulo5"></div>
+        <div class="ball" id="circulo6"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
