--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="title">Adivinhe a Cor!</h1>
-    <h2 id="rgb-color">(168, 34, 1)</h2>
+    <h2 id="rgb-color"></h2>
     <div id="listaBall">
         <div class="ball" id="circulo1"></div>
         <div class="ball" id="circulo2"></div>
