--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1 id="title">Adivinhe a Cor!</h1>
-    <h2 id="rgb-color"></h2>
+    <h2 id="answer">Escolha uma cor</h2>
+    <button id="reset-game">Reiniciar</button>
+    <h3 id="rgb-color"></h3>
     <div id="listaBall">
         <div class="ball" id="circulo1"></div>
         <div class="ball" id="circulo2"></div>
