--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1 id="title">Adivinhe a Cor!</h1>
     <h2 id="answer">Escolha uma cor</h2>
     <button id="reset-game">Reiniciar</button>
-    <h3 id="rgb-color"></h3>
+    <h3 id="score">0</h3>
+    <h4 id="rgb-color"></h4>
     <div id="listaBall">
         <div class="ball" id="circulo1"></div>
         <div class="ball" id="circulo2"></div>
